# xfce4-wmdock-plugin

./: .gitignore  AUTHORS  NEWS  README.md  configure.ac.in
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  dnd.c  dnd.h  misc.c  misc.h  rcfile.c  rcfile.h  tile.xpm  wmdock-dialogs.c  wmdock-dialogs.h  wmdock.c  wmdock.c.old  wmdock.desktop.in  wmdock.h
po/: POTFILES.in
